[gd_scene load_steps=6 format=3 uid="uid://rbxev344pxve"]

[ext_resource type="PackedScene" uid="uid://cytjmcme4xp84" path="res://scenes/fish.tscn" id="1_xn5w8"]
[ext_resource type="Texture2D" uid="uid://bq6y5p4qj6rq8" path="res://assets/fishes/helenasheet.png" id="2_4yugj"]
[ext_resource type="Script" path="res://scripts/helena.gd" id="2_nhxww"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fgomj"]
radius = 22.0
height = 106.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oou2k"]
radius = 53.0094

[node name="Helena" instance=ExtResource("1_xn5w8")]
script = ExtResource("2_nhxww")
idle_max = 7.0
speed = 9000.0

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CapsuleShape2D_fgomj")

[node name="Sprite2D" parent="." index="1"]
texture = ExtResource("2_4yugj")
hframes = 2

[node name="PuffTimer" type="Timer" parent="." index="6"]
wait_time = 3.0
one_shot = true

[node name="PuffedCollisionShape2D" type="CollisionShape2D" parent="." index="7"]
shape = SubResource("CircleShape2D_oou2k")
disabled = true

[connection signal="timeout" from="PuffTimer" to="." method="_on_puff_timer_timeout"]
